grammar.js
    source_file: $ => seq(
      // Treat '#!' as a line comment for now to preserve existing highlighting rules
      optional(alias($.hashbang_line, $.line_comment)),
      repeat($._top_level_item),
    ),

    // Literals
    // -------------------------
    integer_literal: _ => token(seq(
      choice(
        INT,
        seq(/0[xX]/, HINT),
        seq(/0[oO]/, OINT),
        seq(/0[bB]/, BINT),
      ),
      optional(INTTYPE),
    )),

    escape_sequence: _ => token(prec(1, seq(
      '\\',
      choice(
        /[0abefnrtv'"\\]/,
        /x[0-9a-fA-F]{2}/,
        /u[0-9a-fA-F]{4}/,
        /U[0-9a-fA-F]{8}/,
      ),
    ))),

    char_literal: $ => seq(
      '\'',
      repeat1(choice(
        alias(token.immediate(prec(1, /[^\\'\n]+/)), $.char_content),
        // NOTE The compiler does not allow mixing unicode and ASCII/bytes, but permit this here for simplicity.
        $.escape_sequence,
      )),
      '\'',
    ),

    string_literal: $ => seq(
      '"',
      repeat(choice(
        alias(token.immediate(prec(1, /[^\\"\n]+/)), $.string_content),
        $.escape_sequence,
      )),
      '"',
    ),

    raw_string_literal: $ => seq(
      '`',
      alias(token.immediate(repeat(prec(1, /(``|[^`])/))), $.raw_string_content),
      '`',
    ),

    bytes_literal: _ => token(choice(
      seq('x\'', HEX, '\''),
      seq('x"',  HEX, '"'),
      seq('x`',  HEX, '`'),
      seq('b64\'', B64, '\''),
      seq('b64"',  B64, '"'),
      seq('b64`',  B64, '`'),
    )),

    // Comments
    // -------------------------
    ident: _ => IDENT,
    ct_ident: _ => token(seq('$', IDENT)),
    at_ident: _ => token(seq('@', IDENT)),
    hash_ident: _ => token(seq('#', IDENT)),
    // Types
    type_ident: _ => TYPE_IDENT,
    ct_type_ident: _ => token(seq('$', TYPE_IDENT)),
    const_ident: _ => CONST_IDENT,
    _arg_ident: $ => choice(
      $.ident,
      $.ct_ident,
      $.ct_type_ident,
      $.hash_ident
    ),

    _expr_ident: $ => choice(
      $.const_ident,
      $.ident,
      $.at_ident,
    ),

    _local_expr_ident: $ => choice(
      $.ct_ident,
      $.hash_ident,
    ),

    // Module Paths
    // -------------------------
    module_resolution: $ => prec.left(seq(
      $.ident,
      '::',
    )),
    _module_path: $ => repeat1($.module_resolution),
    path_type_ident: $ => seq(optional($._module_path), $.type_ident),
    _generic_args: $ => commaSep1($._expr),
    generic_arg_list: $ => seq('{', optional($._generic_args), '}'),

    // Helpers
    // -------------------------
    _assign_right_expr: $ => seq('=', field('right', $._expr)),

    _cond: $ => choice(
      choice($._try_unwrap_chain, $.catch_unwrap),
      seq(
        commaSep1($._decl_or_expr),
        optional(seq(',', choice($._try_unwrap_chain, $.catch_unwrap))),
      ),
    ),
    paren_cond: $ => seq('(', $._cond, ')'),

    // Parameters
    // -------------------------
    _parameter: $ => choice(
      // Typed parameters
      seq(
        field('type', $.type),
        optional(choice(
          '...', // Deprecated, remove for C3 0.8
          seq('&', field('name', $.ident), optional($.attributes)),
          seq(optional('...'), field('name', choice($.ident, $.ct_ident)), optional($.attributes)),
          // Macro expression parameters
          seq(field('name', $.hash_ident), optional($.attributes)),
        )),
      ),

      // Untyped parameters
      '...',
      seq(field('name', $.ident), optional('...'), optional($.attributes)),
      seq('&', field('name', $.ident), optional($.attributes)), // Method ref parameter such as &self
      // Macro parameters
      seq(
        field('name', choice($.ct_ident, $.hash_ident)),
        optional($.attributes)
      ),
    ),

    param: $ => seq($._parameter, optional($.param_default)),
    _parameters: $ => commaSepTrailing1($.param),

    // Attributes
    // -------------------------
    _top_level_item: $ => choice(
      $.module_declaration,
      $.import_declaration,
      $.global_declaration,
      $.func_definition,

      $.ct_assert_stmt,
      $.ct_echo_stmt,
      $.ct_include_stmt,
      $.ct_exec_stmt,

      $.struct_declaration,
      $.enum_declaration,
      $.macro_declaration,
      $.bitstruct_declaration,
      $.alias_declaration,
      $.faultdef_declaration,
      $.typedef_declaration,
      $.attrdef_declaration,
      $.interface_declaration,
    ),

    // Module
    // -------------------------
    func_header: $ => seq(
      field('return_type', $.type),
      optional(seq(field('method_type', $.type), '.')),
      field('name', $.ident),
    ),

    func_param_list: $ => seq('(', optional($._parameters), ')'),

    func_definition: $ => prec.right(seq(
      optional($.doc_comment),
      'fn',
      $.func_header,
      $.func_param_list,
      optional($.generic_param_list),
      optional($.attributes),
      // The body is made optional to improve error recovery for syntax highlighting (PR #41)
      field('body', optional($.macro_func_body)),
    )),

    implies_body: $ => seq('=>', field('body', $._expr)),

    macro_func_body: $ => choice(
      seq('=>', $.call_expr),
      seq($.implies_body, ';'),
      $.compound_stmt
    ),

    lambda_declaration: $ => seq(
      'fn',
      field('return_type', optional($.type)),
      $.func_param_list,
      optional($.attributes),
    ),

    ////////////////////////////
    // Statements
    // -------------------------
    _statement: $ => choice(
      $.compound_stmt,
      $.expr_stmt,
      $.declaration_stmt,
      $.var_stmt,
      $.return_stmt,
      $.continue_stmt,
      $.break_stmt,
      $.switch_stmt,
      $.nextcase_stmt,
      $.if_stmt,
      $.for_stmt,
      $.foreach_stmt,
      $.while_stmt,
      $.do_stmt,
      $.defer_stmt,
      $.assert_stmt,
      $.asm_block_stmt,

      $.ct_echo_stmt,
      $.ct_assert_stmt,
      $.ct_if_stmt,
      $.ct_switch_stmt,
      $.ct_foreach_stmt,
      $.ct_for_stmt,
      ';',
    ),

    // Labels
    // -------------------------
    compound_stmt: $ => prec(1, seq('{', repeat($._statement), '}')),

    // Expr Statement
    // -------------------------
    expr_stmt: $ => seq($._expr, ';'),

    // Declaration Statement
    // -------------------------
    declaration_stmt: $ => seq($._declaration, ';'),

    // Var Statement
    // -------------------------
    return_stmt: $ => seq('return', optional($._expr), ';'),

    // Continue Statement
    // -------------------------
    _decl_after_type: $ => seq(
      $._decl_ident_or_identifier_list,
      optional($.generic_param_list),
      optional($.attributes),
      optional($._assign_right_expr),
    ),

    _decl_storage: $ => choice('static', 'tlocal'),
    declaration: $ => seq(
      optional($._decl_storage),
      field('type', $.type),
      $._decl_after_type,
    ),

    _declaration: $ => choice(
      $.declaration,
      $.const_declaration,
    ),

    global_declaration: $ => seq(
      optional($.doc_comment),
      optional('extern'),
      choice(
        seq($._declaration, ';'),
        $.func_declaration,
      ),
    ),

    // Case Statement
    // -------------------------
    catch_unwrap_list: $ => commaSep1($._expr),
    catch_unwrap: $ => prec(1, seq(
      'catch',
      optional(seq(optional($.type), $.ident, '=')),
      $.catch_unwrap_list,
    )),

    // If-Try
    // -------------------------
    // Precedence over &&
    try_unwrap: $ => prec(PREC.LOGICAL_AND + 1, seq(
      'try',
      optional(seq(optional($.type), $.ident, '=')),
      $._expr,
    )),

    if_stmt: $ => prec.right(seq(
      'if',
      optional($.label),
      field('condition', $.paren_cond),
      field('body', $._statement),
      optional($.else_part),
    )),
    _expr: $ => prec(0, choice(
      $.assignment_expr,
      $.ternary_expr,
      $.lambda_expr,
      $.elvis_orelse_expr,
      $.optional_expr,
      $.binary_expr,
      $.unary_expr,
      $.cast_expr,
      $.rethrow_expr,
      $.trailing_generic_expr,
      $.update_expr,
      $.call_expr,
      $.subscript_expr,
      $._base_expr,
    )),

    // Base Expression
    // -------------------------
    ident_expr: $ => choice(
      seq(optional($._module_path), $._expr_ident),
      $._local_expr_ident,
    ),

    _type_expr: $ => choice(
      $.type,
      alias($.type_paren_expr, $.paren_expr),
    ),
    bytes_expr: $ => repeat1($.bytes_literal),
    paren_expr: $ => seq('(', $._expr, ')'),

    // Precedence over cast
    typed_initializer_list: $ => prec(3, seq('(', $._type_expr, ')', $.initializer_list)),

    param_path_element: $ => prec(1, choice(
      seq('[', $._expr, ']'),
      seq('[', $._expr, '..', $._expr, ']'),
      seq('.', $._access_ident_expr),
    )),
    param_path: $ => repeat1($.param_path_element),

    initializer_element: $ => choice(
      seq($.param_path, $._assign_right_expr),
      $.param_path, // Bitstruct bool shorthand
      $._expr,
      // Splatting
      seq('$vasplat', optional(seq('[', $.range_expr, ']'))),
      seq('...', $._expr),
    ),

    initializer_list: $ => seq('{', commaSepTrailing($.initializer_element), '}'),

    // Assignment Expression
    // -------------------------
    _assignment_op: $ => choice(
      '=',
      '+=',
      '-=',
      '*=',
      '/=',
      '%=',
      '<<=',
      '>>=',
      '&=',
      '^=',
      '|=',
      '+++=',
    ),
    assignment_expr: $ => prec.right(PREC.ASSIGNMENT, choice(
      seq(
        field('left', $._expr),
        field('operator', $._assignment_op),
        field('right', $._expr),
      ),
      seq(
        field('left', $.ct_type_ident),
        field('operator', '='),
        field('right', $._expr),
      ),
    )),

    // Ternary Expression
    // -------------------------
    ternary_expr: $ => prec.right(PREC.TERNARY, choice(
      seq(
        field('condition', $._expr),
        choice('?', '???'),
        field('consequence', $._expr),
        ':',
        field('alternative', $._expr),
      ),
    )),

    // Lambda Expression
    // -------------------------
    lambda_expr: $ => prec.right(PREC.TERNARY, seq($.lambda_declaration, $.implies_body)),

    // Elvis/or-else (?:, ??) Expression
    // -------------------------
    elvis_orelse_expr: $ => prec.right(PREC.TERNARY, seq(
      field('condition', $._expr),
      field('operator', choice('?:', '??')),
      field('alternative', $._expr),
    )),

    // Optional Expression
    // -------------------------
    optional_expr: $ => prec.right(PREC.TERNARY, seq(
      field('argument', $._expr),
      field('operator', choice(
        '~',
        seq('~', '!'),
        '?',
        seq('?', '!'),
      )),
    )),

    // Cast Expression
    // -------------------------
    cast_expr: $ => prec(PREC.UNARY, seq(
      '(',
      field('type', $._type_expr),
      ')',
      field('value', $._expr),
    )),

    // Unary Expression
    // -------------------------
    _unary_op: $ => choice(
      '&',
      '&&',
      '*',
      '+',
      '-',
      '~',
      '!',
      '++',
      '--',
    ),
    unary_expr: $ => prec(PREC.UNARY, seq(
      field('operator', $._unary_op),
      field('argument', $._expr),
    )),

    // Binary Expression
    // -------------------------
    binary_expr: $ => {
      const table = [
        ['+', PREC.ADD],
        ['-', PREC.ADD],
        ['*', PREC.MULTIPLY],
        ['/', PREC.MULTIPLY],
        ['%', PREC.MULTIPLY],
        ['|', PREC.BITWISE],
        ['^', PREC.BITWISE],
        ['&', PREC.BITWISE],
        ['==', PREC.RELATIONAL],
        ['!=', PREC.RELATIONAL],
        ['>', PREC.RELATIONAL],
        ['>=', PREC.RELATIONAL],
        ['<=', PREC.RELATIONAL],
        ['<', PREC.RELATIONAL],
        ['<<', PREC.SHIFT],
        ['>>', PREC.SHIFT],
        ['||', PREC.LOGICAL_OR],
        ['&&', PREC.LOGICAL_AND],
        // Compile time operators
        ['|||', PREC.LOGICAL_OR],
        ['&&&', PREC.LOGICAL_AND],
        ['+++', PREC.ADD],
      ];

      return make_binary_expr($, table);
    },

    // Call Expression
    // -------------------------
    call_arg: $ => choice(
      $._expr,
      // Splatting
      seq('$vasplat', optional(seq('[', $.range_expr, ']'))),
      seq('...', $._expr),
      // Named arguments
      seq(field('name', $._arg_ident), ':', optional('...'), $._expr),
    ),

    _call_args: $ => choice(
      commaSepTrailing1($.call_arg),
      seq(
        commaSepTrailing($.call_arg),
        seq(';', optional($._parameters)),
      ),
    ),

    call_arg_list: $ => seq('(', optional($._call_args), ')'),

    // Right precedence for `@require foo() @pure` doc contract
    call_inline_attributes: $ => prec.right(repeat1(alias(choice('@pure', '@inline', '@noinline'), $.at_ident))),
    call_expr: $ => prec.right(PREC.TRAILING, seq(
      field('function', $._expr),
      field('arguments', $.call_arg_list),
      field('attributes', optional($.call_inline_attributes)),
      field('trailing', optional($.compound_stmt)),
    )),

    // Postfix Update Expression (--/++)
    // -------------------------
    update_expr: $ => prec.right(PREC.TRAILING, seq(
      field('argument', $._expr),
      field('operator', choice('--', '++')),
    )),

    // Rethrow Expression
    // -------------------------
    _range_loc: $ => seq(
      optional('^'),
      $._expr,
    ),
    range_expr: $ => seq(
      field('left', optional($._range_loc)),
      field('operator', choice('..', ':')),
      field('right', optional($._range_loc))
    ),

    // Subscript Expression
    // -------------------------
    subscript_expr: $ => prec.right(PREC.SUBSCRIPT, seq(
      field('argument', $._expr),
      '[',
      choice(
        field('index', $._range_loc),
        field('range', $.range_expr),
      ),
      ']',
    )),

    // Field/Type-Access Expression
    // -------------------------
    access_ident: $ => choice(
      $.ident,       // Field/method function
      $.at_ident,    // Method macro
      $.hash_ident,  // Hash
      $.const_ident, // Enum access
      $.access_eval, // $eval
      $.ct_ident,    // Eval shorthand
      $.string_literal,
    ),

    _access_ident_expr: $ => choice(
      field('field', $.access_ident),
      seq('(', $._access_ident_expr, ')'),
    ),

    field_expr: $ => seq(
      prec(PREC.FIELD, seq(
        field('argument', $._expr),
        '.',
      )),
      $._access_ident_expr,
    ),

    base_type_name: $ => choice(
      'void',
      'bool',
      'char',
      'ichar',
      'short',
      'ushort',
      'int',
      'uint',
      'long',
      'ulong',
      'int128',
      'uint128',
      'float',
      'double',
      'float16',
      'bfloat',
      'float128',
      'iptr',
      'uptr',
      'sz',
      'usz',
      'fault',
      'any',
      'typeid',
    ),

    _base_type: $ => prec.right(choice(
      $.base_type_name,
      $.path_type_ident,
      $.ct_type_ident,
      seq(
        choice(
          '$typeof',
          '$typefrom',
        ),
        $.paren_expr,
      ),
      '$vatype', // Followed by type_suffix with index
    )),

    generic_type_ident: $ => seq(
      $._base_type,
      $.generic_arg_list,
    ),

    type_suffix: $ => choice(
      '*',
      seq('[', $._expr, ']'),
      seq('[', ']'),
      seq('[', '*', ']'),
      seq('[<', $._expr, '>]', optional(alias('@simd', $.at_ident))),
      seq('[<', '*', '>]', optional(alias('@simd', $.at_ident))),
    ),

    type: $ => prec.right(seq(
      choice(
        $._base_type,
        $.generic_type_ident
      ),
      repeat($.type_suffix),
      optional(choice('~', '?')),
    )),
